<resources>
    <string name="app_name">APP Control Stock</string>
    <string name="app_titulo">Control Stock</string>
    <string name="app_header_titulo">Usuário Controle</string>
    <string name="open">Open</string>
    <string name="Close">Close</string>
    <string name="txtView2">Usuário</string>
    <string name="txtView3">Senha</string>
    <string name="txtHeader">Control Stock</string>
    <string name="homeButtonLogout">Logout</string>
    <string name="homeButtonUsers">Usuários</string>
    <string name="homeButtonProducts">Produtos</string>
    <string name="homeButtonStock">Estoque</string>
    <string name="homeButtonReport">Relatórios</string>
    <string name="homeButtonFinancial">Controle Financeiro</string>
    <string name="txtByAuthor">By:Paulo Ricardo</string>
    <string name="title_activity_usuario">UsuarioActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="item_nav_listUser">Todos Usuários</string>
    <string name="item_home_user">Home</string>

    <!-- String da tela de Login-->
    <string name="text_subTitulo_login">Faça login para acessar o sistema</string>
    <string name="text_button_login">Entrar</string>

    <!-- String da tela Home -->
    <string name="text_titulo">Painel de Controle</string>
    <string name="text_subTitulo">"Gerencie usuários, estoque e acesso ao sistema"</string>

    <!-- String da Tela de Home User -->
    <string name="txt_titulo_home">APP Control Stock</string>
    <string name="txt_descricao">Este aplicativo foi desenvolvido para controle de estoque e gerenciamento de usuários.</string>
    <string name="txt_projeto">Projeto</string>
    <string name="txt_projeto_subtitulo">Sistema de Controle de Estoque</string>
    <string name="txt_desenvolvedor">Desenvolvedor</string>
    <string name="txt_autor">Autor</string>
    <string name="txt_area">Módulo Atual</string>
    <string name="txt_area_controle">Controle de Usuários</string>
    <string name="txt_versao">Versão do Aplicativo</string>
    <string name="txt_v">v1.0.0"</string>

    <!-- Strings da Tela de Usuário-->
    <string name="nav_meu_usuario">Meu Usuário</string>
    <string name="voltar">Voltar</string>
    <string name="my_user_id">ID de Usuário</string>
    <string name="my_user_name">Nome</string>
    <string name="my_user_username">Usuário</string>
    <string name="my_user_role">Acesso</string>

    <!-- String da Tela de Criar Usuário-->
    <string name="nav_create">Criar Usuário</string>
    <string name="titulo_tela_create">Novo Usuário</string>
    <string name="create_name">Nome</string>
    <string name="hint_nome">Nome</string>
    <string name="create_username">Usuário</string>
    <string name="hint_username">Usuário</string>
    <string name="create_password">Senha</string>
    <string name="hint_password">Senha</string>
    <string name="create_role">Acesso</string>
    <string name="radio_admin">ADMIN</string>
    <string name="radio_user">USER</string>

    <string name="btn_cadastrar">Cadastrar</string>

    <!-- String da Tela de list User-->
    <string name="list_id">ID</string>
    <string name="list_name">Name</string>
    <string name="list_username">Username</string>
    <string name="list_role">Acesso</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>