<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_user"
            android:icon="@drawable/ic_home_user"
            android:title="@string/item_home_user"
            />
        <item
            android:id="@+id/nav_my_user"
            android:icon="@drawable/ic_my_user"
            android:title="@string/nav_meu_usuario" />

        <item
            android:id="@+id/nav_create"
            android:icon="@drawable/ic_create"
            android:title="@string/nav_create"
            />

        <item
            android:id="@+id/nav_listUser"
            android:icon="@drawable/ic_list_user"
            android:title="@string/item_nav_listUser"
            />


    </group>
</menu>