<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_home"
    tools:context=".ui.homeUser.HomeUserFragment">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:padding="24dp">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@drawable/bg_card"
           android:orientation="vertical"
           android:padding="20dp">

           <!-- Título -->
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/txt_titulo_home"
               android:textColor="@color/text_primary"
               android:textSize="26sp"
               android:textStyle="bold"/>
           <!-- Descrição -->
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="12dp"
               android:layout_marginBottom="20dp"
               android:text="@string/txt_descricao"
               android:textAlignment="center"
               android:textColor="@color/text_secondary"
               android:textSize="15sp" />

           <!-- Projeto -->
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/txt_projeto"
               android:textColor="@color/text_secondary"
               android:textSize="14sp"
               android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_input"
                android:padding="12dp"
                android:text="@string/txt_projeto_subtitulo"
                android:textColor="@color/text_primary"
                android:textSize="16sp" />
           <!-- Desenvolvedor -->
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/txt_desenvolvedor"
               android:textColor="@color/text_secondary"
               android:textSize="14sp"
               android:textStyle="bold"/>
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginBottom="16sp"
               android:background="@drawable/bg_input"
               android:padding="12dp"
               android:text="@string/txt_autor"
               android:textColor="@color/text_primary"
               android:textSize="16sp" />

           <!-- Área Atual-->
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/txt_autor"
               android:textColor="@color/text_secondary"
               android:textSize="14sp"
               android:textStyle="bold" />
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginBottom="16dp"
               android:background="@drawable/bg_input"
               android:padding="12dp"
               android:text="@string/txt_area_controle"
               android:textColor="@color/text_primary"
               android:textSize="16sp" />

           <!-- Versão -->
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/txt_versao"
               android:textColor="@color/text_secondary"
               android:textSize="14sp"
               android:textStyle="bold" />

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/bg_input"
               android:padding="12dp"
               android:text="@string/txt_v"
               android:textColor="@color/text_primary"
               android:textSize="16sp" />

       </LinearLayout>

   </LinearLayout>

</ScrollView>